# purple-archive-server

./: .gitignore  README.md  alembic.ini  build.sh  main.py  manage.py  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 1696177955_7d16a6c3cf7f_add_initial_tables.py  1696257122_6922a7d0a04f_add_timezone_info_to_datetime_columns.py  1696350163_ea68b8b754f2_save_hash_to_temp_album.py  1696433754_cf68beedb410_add_thumb_source_to_album.py  1696439470_905dc528d048_rename_album_tag_tag_into_tag_id.py
auth/: auth.py  jwt.py
ocr/: gif.py  image_annotator.py  test.py
purple_archive_server/: asgi.py  settings.py  urls.py  wsgi.py
routers/: albums.py  bookmarks.py  gamemodes.py  json_response.py  tags.py  temp_albums_cleaner.py  users.py
server/: models.py  serializer.py  urls.py
server/migrations/: 0001_initial.py  0002_alter_user_deleted_at.py  0003_alter_user_deleted_at.py  0004_alter_user_id_alter_user_name.py
sql_app/: crud.py  database.py  models.py  schemas.py
sql_interface/: crud.py  database.py  models.py  schemas.py
storage/: s3.py
