[tool.poetry]
name = "purple-archive-server"
version = "0.1.0"
description = ""
authors = ["tsubasa283paris <tsubasa283paris@gmail.com>"]
readme = "README.md"
packages = [{include = "purple_archive_server"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.3"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
