[tool.poetry]
name = "purple-archive-server"
version = "0.1.0"
description = ""
authors = ["tsubasa283paris <tsubasa283paris@gmail.com>"]
readme = "README.md"
packages = [{include = "purple_archive_server"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg2 = "^2.9.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
opencv-python = "^4.8.1.78"
opencv-contrib-python = "^4.8.1.78"
google-cloud-vision = "^3.4.4"
boto3 = "^1.28.58"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
